Move 'Fav' column for all table rows. Tweak to font styles. - Remove 'small' classes, drop table font size, adjust link color for page body, add intro text class as per agilestyle site.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -31,12 +31,13 @@ page: 'Home'
     .container
       .row
         .col-sm-8.col-sm-offset-2
-          %p.text-center
+          %p.text-center.intro-text
             Choosing the right Squarespace template isn’t always the easiest process, as there is really no way to view all templates at once or compare features. Since we <a href="http://agilestyle-builds-on.squarespace.com/" target="_blank">build on Squarespace</a> pretty often, we’ve decided to put together this handy chart that compares features and limitations of each template, as well as the categories they appear in on the <a href="http://squarespace.com/templates" target="_blank">Squarespace site</a>.
 
       %table.comparison.display.responsive
         %thead
           %tr
+            %th Fav
             %th Name
             %th Categories
             %th Header Type
@@ -45,9 +46,9 @@ page: 'Home'
             %th Nav Type
             %th Secondary Nav
             %th Links
-            %th Fav
         %tfoot
           %tr
+            %th Fav
             %th Name
             %th Categories
             %th Header Type
@@ -56,10 +57,10 @@ page: 'Home'
             %th Nav Type
             %th Secondary Nav
             %th Links
-            %th Fav
 
         %tbody
           %tr
+            %td.text-center
             %td Adirondack
             %td Businesses, Stores, Personal
             %td Image, Full Width, Text
@@ -70,10 +71,10 @@ page: 'Home'
             %td 
               %a{:href => 'http://adirondack-demo.squarespace.com/' , :target => '_blank'} Demo
               %a{:href => 'http://adirondack-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Adversary
             %td Musicians
             %td Full Width, Image&amp;Text
@@ -84,10 +85,10 @@ page: 'Home'
             %td
               %a{:href => 'http://adversary-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://adversary-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Alex
             %td Weddings
             %td Full Width, Image&amp;Text
@@ -98,10 +99,10 @@ page: 'Home'
             %td
               %a{:href => 'http://alex-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://alex-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Anya
             %td Weddings
             %td Full Width, Image&amp;Text
@@ -112,10 +113,10 @@ page: 'Home'
             %td
               %a{:href => 'http://anya-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://anya-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Aubrey
             %td Weddings
             %td N/A
@@ -126,10 +127,11 @@ page: 'Home'
             %td
               %a{:href => 'http://aubrey-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://aubrey-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
+              %i.fa.fa-star
             %td Avenue
             %td Personal, Portfolios, Stores
             %td N/A
@@ -140,10 +142,9 @@ page: 'Home'
             %td
               %a{:href => 'http://avenue-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://avenue-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
-              %i.fa.fa-star
 
           %tr
+            %td.text-center
             %td Aviator
             %td Businesses, Personal
             %td N/A
@@ -154,10 +155,10 @@ page: 'Home'
             %td
               %a{:href => 'http://aviator-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://aviator-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Bedford
             %td Businesses, Personal
             %td Full Width, Image&amp;Text
@@ -168,10 +169,10 @@ page: 'Home'
             %td
               %a{:href => 'http://bedford-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://bedford-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Boutique
             %td N/A
             %td N/A
@@ -182,10 +183,10 @@ page: 'Home'
             %td
               %a{:href => 'http://boutique-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://boutique-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Bryant
             %td Businesses
             %td Full Width, Image&amp;Text
@@ -196,10 +197,10 @@ page: 'Home'
             %td
               %a{:href => 'http://bryant-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://bryant-demo.squarespace.com/read-me', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Charlotte
             %td Weddings
             %td Full Width, Image&amp;Text
@@ -210,10 +211,10 @@ page: 'Home'
             %td
               %a{:href => 'http://charlotte-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://charlotte-demo.squarespace.com/read-me', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Dovetail
             %td Businesses, Stores
             %td Image
@@ -224,10 +225,10 @@ page: 'Home'
             %td
               %a{:href => 'http://dovetail-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://dovetail-demo.squarespace.com/read-me', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Encore
             %td Musicians
             %td N/A
@@ -238,10 +239,10 @@ page: 'Home'
             %td
               %a{:href => 'http://encore-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://encore-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Five
             %td Businesses, Restaurants
             %td Full Width, Image&amp;Text
@@ -252,10 +253,10 @@ page: 'Home'
             %td
               %a{:href => 'http://five-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://five-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Flatiron
             %td Portfolios
             %td N/A
@@ -266,10 +267,10 @@ page: 'Home'
             %td
               %a{:href => 'http://flatiron-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://flatiron-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Forte
             %td Portfolios, Restaurants
             %td N/A
@@ -280,10 +281,11 @@ page: 'Home'
             %td
               %a{:href => 'http://forte-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://forte-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
+              %i.fa.fa-star
             %td Frontrow
             %td Portfolios
             %td N/A
@@ -293,10 +295,9 @@ page: 'Home'
             %td Header
             %td
               %a{:href => 'http://frontrow-demo.squarespace.com/', :target => '_blank'} Demo
-            %td.text-center
-              %i.fa.fa-star
 
           %tr
+            %td.text-center
             %td Fulton
             %td Businesses, Stores
             %td Full Width, Image&amp;Text
@@ -307,10 +308,10 @@ page: 'Home'
             %td
               %a{:href => 'http://fulton-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://fulton-demo.squarespace.com/readme/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Galapagos
             %td Stores
             %td N/A
@@ -321,10 +322,11 @@ page: 'Home'
             %td
               %a{:href => 'http://galapagos-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://galapagos-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
+              %i.fa.fa-star
             %td Hayden
             %td Businesses
             %td Full Width, Image&amp;Text
@@ -335,10 +337,9 @@ page: 'Home'
             %td
               %a{:href => 'http://hayden-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://hayden-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
-              %i.fa.fa-star
 
           %tr
+            %td.text-center
             %td Horizon
             %td Musicians
             %td Full Width, Image&amp;Text
@@ -349,10 +350,10 @@ page: 'Home'
             %td
               %a{:href => 'http://horizon-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://horizon-demo.squarespace.com/readme/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Ishimoto
             %td Businesses, Portfolios, Stores, Restaurants
             %td N/A
@@ -363,10 +364,10 @@ page: 'Home'
             %td
               %a{:href => 'http://ishimoto-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://ishimoto-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Julia
             %td Weddings
             %td Fixed Width, Image, Text
@@ -377,10 +378,10 @@ page: 'Home'
             %td
               %a{:href => 'http://julia-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://julia-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Marquee
             %td Businesses, Restaurants
             %td Full Width, Image&amp;Text
@@ -391,10 +392,10 @@ page: 'Home'
             %td
               %a{:href => 'http://marquee-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://marquee-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Momentum
             %td Portfolios
             %td Fixed Width, Text
@@ -405,10 +406,10 @@ page: 'Home'
             %td
               %a{:href => 'http://momentum-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://momentum-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Montauk
             %td Businesses, Portfolios, Stores, Restaurants
             %td Fixed Width, Image&amp;Text
@@ -419,10 +420,10 @@ page: 'Home'
             %td
               %a{:href => 'http://montauk-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://montauk-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Naomi
             %td Weddings
             %td Full Width, Image&amp;Text
@@ -433,10 +434,10 @@ page: 'Home'
             %td
               %a{:href => 'http://naomi-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://naomi-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Native
             %td Personal
             %td N/A
@@ -446,10 +447,10 @@ page: 'Home'
             %td None
             %td
               %a{:href => 'http://native-demo.squarespace.com/', :target => '_blank'} Demo
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Om
             %td Businesses
             %td Fixed Width, Image&amp;Text
@@ -460,10 +461,11 @@ page: 'Home'
             %td
               %a{:href => 'http://om-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://om-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
+              %i.fa.fa-star
             %td Pacific
             %td Businesses, Personal, Restaurants
             %td Full Width, Image&amp;Text
@@ -474,10 +476,9 @@ page: 'Home'
             %td
               %a{:href => 'http://pacific-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://pacific-demo.squarespace.com/readme/', :target => '_blank'} Readme
-            %td.text-center
-              %i.fa.fa-star
 
           %tr
+            %td.text-center
             %td Peak
             %td Restaurants
             %td Full Width, Image&amp;Text
@@ -488,10 +489,10 @@ page: 'Home'
             %td
               %a{:href => 'http://peak-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://peak-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Shift
             %td Personal
             %td Full Width, Image&amp;Text
@@ -502,10 +503,10 @@ page: 'Home'
             %td
               %a{:href => 'http://shift-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://shift-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Supply
             %td Stores
             %td N/A
@@ -516,10 +517,10 @@ page: 'Home'
             %td
               %a{:href => 'http://supply-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://supply-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Wells
             %td Portfolios
             %td N/A
@@ -530,10 +531,10 @@ page: 'Home'
             %td
               %a{:href => 'http://wells-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://wells-demo.squarespace.com/read-me/', :target => '_blank'} Readme
-            %td.text-center
 
 
           %tr
+            %td.text-center
             %td Wexley
             %td Portfolios
             %td N/A
@@ -543,19 +544,16 @@ page: 'Home'
             %td None
             %td
               %a{:href => 'http://wells-demo.squarespace.com/', :target => '_blank'} Demo
-            %td.text-center
 
       .row
         .col-md-8.col-md-offset-2
           %br
           %p.text-center
-            %small
-              Starred templates (<i class='fa fa-star'></i>) indicate AgileStyle's favourite templates for overall usefulness. When building Squarespace sites, we find ourselves coming back to these templates time and time again because of their flexibility.
+            Starred templates (<i class='fa fa-star'></i>) indicate AgileStyle's favourite templates for overall usefulness. When building Squarespace sites, we find ourselves coming back to these templates time and time again because of their flexibility.
         .col-xs-12
           %p.text-center
-            %small
-              %em
-                This site was inspired by Miko Coffey's awesome <a href='http://www.usingmyhead.com/squarespace-6-template-comparison-chart/' target='_blank'>Squarespace 6 template guide</a>.
+            %em
+              This site was inspired by Miko Coffey's awesome <a href='http://www.usingmyhead.com/squarespace-6-template-comparison-chart/' target='_blank'>Squarespace 6 template guide</a>.
         .col-sm-6.col-sm-offset-3
           %br
           %p.text-center
