--- a/source/layout.haml
+++ b/source/layout.haml
@@ -62,11 +62,11 @@
   %body{:class => page_classes}
     :javascript
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-1478414-6', 'agilestyle.com');
+      ga('create', 'UA-1478414-66', 'auto');
       ga('send', 'pageview');
 
     = yield
@@ -95,3 +95,5 @@
 
           .footer-column.col-sm-4
             %h5.footer-header= "&copy; 2007-#{Time.now.year} AgileStyle Inc."
+
+        %p This site is in no way affiliated with Squarespace Inc. except for the fact that we love their product and want to give back to the Squarespace Community.
