--- a/source/stylesheets/sections/_table.scss
+++ b/source/stylesheets/sections/_table.scss
@@ -1,7 +1,18 @@
+
+.dataTables_wrapper {
+  
+  .clear {
+    clear: both;
+    margin-bottom: 30px;
+  }
+}
+
 table.dataTable {
 
   width: 100% !important;
   padding: 15px 0;
+  font-size: 14px;
+
 
 	th {
     padding: 10px 30px 10px 20px;
