Change header logo link to go to agilestyle-builds-on.squarespace.com

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -9,7 +9,7 @@ page: 'Home'
   .page-header-image.index
     .page-header-overlay
   .container
-    %a.header-logo{:href => '/'}
+    %a.header-logo{:href => 'http://agilestyle-builds-on.squarespace.com/'}
     %h1.page-head
       Squarespace
       %br
