Resize intro text column width

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -33,9 +33,9 @@ page: 'Home'
   .content-wrap
     .container
       .row
-        .col-sm-8.col-sm-offset-2
+        .col-sm-10.col-sm-offset-1
           %p.text-center.intro-text
-            Choosing the right Squarespace template isn’t always the easiest process, as there is really no way to view all templates at once or compare features. Since we <a href="http://agilestyle-builds-on.squarespace.com/" target="_blank">build on Squarespace</a> pretty often, we’ve decided to put together this handy chart that compares features and limitations of each template, as well as the categories they appear in on the <a href="http://squarespace.com/templates" target="_blank">Squarespace site</a>.
+            Choosing the right Squarespace template isn’t always the easiest process, as there is really no way to view all templates at once or compare features. Since <a href="http://agilestyle-builds-on.squarespace.com/" target="_blank">we build on Squarespace</a> pretty often, we’ve decided to put together this handy chart that compares features and limitations of each template, as well as the categories they appear in on the <a href="http://squarespace.com/templates" target="_blank">Squarespace site</a>.
 
       %table.comparison.display.responsive
         %thead
