Add Secondary CTA, remove redundant content.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -549,23 +549,18 @@ page: 'Home'
               %a{:href => 'http://wells-demo.squarespace.com/', :target => '_blank'} Demo
 
       .row
-        .col-md-8.col-md-offset-2
+        .col-sm-8.col-sm-offset-2.text-center
           %br
-          %p.text-center
+          %p
             Starred templates (<i class='fa fa-star'></i>) indicate AgileStyle's favourite templates for overall usefulness. When building Squarespace sites, we find ourselves coming back to these templates time and time again because of their flexibility.
-          %p.text-center
+          %p
             %em
               This site was inspired by Miko Coffey's awesome <a href='http://www.usingmyhead.com/squarespace-6-template-comparison-chart/' target='_blank'>Squarespace 6 template guide</a>.
-          %p.text-center
-            Questions? Feel free to contact us.
-            %br
-            %a{:href => 'mailto:info@agilestyle.com', :target => '_blank'}
-              %i.fa.fa-envelope
-                info@agilestyle.com
-            %br
-            %a{:href => 'https://twitter.com/AgileStyleInc', :target => '_blank'}
-              %i.fa.fa-twitter
-                @AgileStyleInc
+        .col-sm-6.col-sm-offset-3.text-center
+          %p
+            Still stuck? AgileStyle builds Squarespace sites, and we can help get yours up and running.
+          %a.button.secondary{:href => 'http://hire-experts.squarespace.com/'}
+            Learn More
       -#
         .footnotes
           .row
