Tweak wording of affiliation disclaimer. Move it into third column.

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -95,5 +95,4 @@
 
           .footer-column.col-sm-4
             %h5.footer-header= "&copy; 2007-#{Time.now.year} AgileStyle Inc."
-
-        %p This site is in no way affiliated with Squarespace Inc. except for the fact that we love their product and want to give back to the Squarespace Community.
+            %p We are not affiliated with Squarespace, but we love their product and want to share with the Squarespace community!
