--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -9,7 +9,7 @@ page: 'Home'
   .page-header-image.index
     .page-header-overlay
   .container
-    %a.header-logo{:href => 'http://agilestyle-builds-on.squarespace.com/'}
+    %a.header-logo{:href => 'http://hire-experts.squarespace.com/'}
     %h1.page-head
       Squarespace
       %br
@@ -35,7 +35,7 @@ page: 'Home'
       .row
         .col-sm-10.col-sm-offset-1
           %p.text-center.intro-text
-            Choosing the right Squarespace template isn’t always the easiest process, as there is really no way to view all templates at once or compare features. Since <a href="http://agilestyle-builds-on.squarespace.com/" target="_blank">we build on Squarespace</a> pretty often, we’ve decided to put together this handy chart that compares features and limitations of each template, as well as the categories they appear in on the <a href="http://squarespace.com/templates" target="_blank">Squarespace site</a>.
+            Choosing the right Squarespace template isn’t always the easiest process, as there is really no way to view all templates at once or compare features. Since <a href="http://hire-experts.squarespace.com/">we build on Squarespace</a> pretty often, we’ve decided to put together this handy chart that compares features and limitations of each template, as well as the categories they appear in on the <a href="http://squarespace.com/templates" target="_blank">official Squarespace templates page</a>.
 
       %table.comparison.display.responsive
         %thead
