Use proper AgileStyle Blue (from logo) and add 'green' button style

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -559,7 +559,7 @@ page: 'Home'
         .col-sm-6.col-sm-offset-3.text-center
           %p
             Still stuck? AgileStyle builds Squarespace sites, and we can help get yours up and running.
-          %a.button.secondary{:href => 'http://hire-experts.squarespace.com/'}
+          %a.button.green{:href => 'http://hire-experts.squarespace.com/'}
             Learn More
       -#
         .footnotes
