Fix category ordering for sorting reasons

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -65,7 +65,7 @@ page: 'Home'
           %tr
             %td.text-center
             %td Adirondack
-            %td Businesses, Stores, Personal
+            %td Businesses, Personal, Stores
             %td Image, Full Width, Text
             %td No
             %td None
@@ -358,7 +358,7 @@ page: 'Home'
           %tr
             %td.text-center
             %td Ishimoto
-            %td Businesses, Portfolios, Stores, Restaurants
+            %td Businesses, Portfolios, Restaurants, Stores
             %td N/A
             %td No
             %td Blog
@@ -414,7 +414,7 @@ page: 'Home'
           %tr
             %td.text-center
             %td Montauk
-            %td Businesses, Portfolios, Stores, Restaurants
+            %td Businesses, Portfolios, Restaurants, Stores
             %td Fixed Width, Image&amp;Text
             %td Yes
             %td Gallery
