Move existing cta to new block. Add cta block styling. Add sign up form for 6 Steps Guide. Add form styling

--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -13,8 +13,11 @@
 
 @import "vendor/datatables.min";
 @import "vendor/datatables.responsive";
+
 @import "sections/table";
 @import "sections/footnotes";
+@import "sections/cta";
+@import "sections/subscribe-form";
 
 @import "widgets/main-nav";
 @import "widgets/buttons";
