Correction to Five sidebar.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -250,7 +250,7 @@ page: 'Home'
             %td Businesses, Restaurants
             %td Full Width, Image&amp;Text
             %td No
-            %td None
+            %td Blog
             %td Static
             %td None
             %td
